fixxed all error that swagger gave
